# yapslop

./: .gitignore  .mise.toml  pyproject.toml  readme.md
examples/: original.py
src/yapslop/: audio_helpers.py  cli.py  convo_dto.py  convo_helpers.py  generator.py  server.py  yap.py  yap_common.py  yaproviders.py
src/yapslop/providers/: parsers.py  yaproviders.py
src/yapslop/static/: index.html
src/yapslop/utils/: autils.py  console.py  schema_generator.py
tests/: conftest.py  test_benchmark.py  test_yap.py  test_yaprovider.py
tests/csm/: test_generator.py
